	(epackage-batch-ui-download-action-enable-toggle): Call
	`epackage-batch-ui-display-package-action-list'.
	(epackage-batch-ui-download-action-activate-toggle): Call
	`epackage-batch-ui-display-package-action-list'.
	(epackage-status-installed-packages): Include 'activated'
	packages too.
	(epackage-status-not-installed-packages): Correct function.
	Use `epackage-status-installed-packages'.

2011-04-01 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el: (Commentary): Fix various typos and improve
	sentences.

2011-01-31  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-whitespace-trailing-regexp): New.
	(epackage-buffer-remove-whitespace-eol): Use
	`epackage-whitespace-trailing-regexp'.
	(epackage-autoload-generate-loaddefs-dir): Change order of
	parameters DIR and FILE. Add interactive spec for FILE.
	(epackage-autoload-write-loaddefs-file): Turn off `auto-save-mode'.
	(epackage-devel-generate-autoloads): New.
	(epackage-devel-generate-loaddefs): New.
	(epackage-devel-compose-package): New.
	(epackage-devel-template-directory): New.
	(epackage-autoload-generate-loaddefs-dir): Adjust regexp: do not
	require dash.

2011-01-14 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-write-region): Add `backup-enable-predicate'.
	(epackage-with-write-file): New.
	(epackage-write-region): Rewrite.
	(epackage-save-buffer): New.
	(epackage-buffer-remove-whitespace-eol): New.
	(epackage-with-command-line): devel
	(epackage-file-name-add-suffix): devel
	(epackage-directory-file-list): devel
	(tinylisp-autoload-write-loaddefs-file): devel
	(epackage-autoload-generate-loaddefs-file-list): devel
	(epackage-batch-autoload-generate-loaddefs-file): devel
	(epackage-autoload-generate-loaddefs-dir): devel
	(epackage-batch-autoload-generate-loaddefs-dir): devel
	(epackage-autoload-create-on-file): devel
	(epackage-autoload-create-on-directory): devel
	(epackage-autoload-loaddefs-create-maybe): devel
	(epackage-autoload-loaddefs-dir-files): devel