@@ -35,6 +35,7 @@
 	packages too.
 	(epackage-status-not-installed-packages): Correct function.
 	Use `epackage-status-installed-packages'.
+	(epackage--batch-ui-menu-header): Display version.
 
 2011-04-01 Fri  Jari Aalto  <jari.aalto@cante.net>
 
